fix: icon color, button spacing, and background color(remove default class support)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -37,3 +37,10 @@
 [data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.navbar__logo {
+  flex: 0 0 auto;
+  height: 2rem;
+  margin-right: 0.75rem;
+  margin-bottom: 0.25rem;
+}
